fix strange ios alignmrnt bug

--- a/packages/schnauze-styles/client/sass/module/_listItem.sass
+++ b/packages/schnauze-styles/client/sass/module/_listItem.sass
@@ -51,9 +51,16 @@
     &-pause
       opacity: 1
 
+// Trigger - Data
+.listItem_data
+  // fix strange ios display
+  align-self: center
+
 // Trigger - Pulse
 .listItem_pulse
   padding: 0 $space
+  // fix strange ios display
+  align-self: center
 
 
 // Info
